<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="music.list.view.activity.characterDetails.CharacterDetailsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_light"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/ivBackground"
            imageUrlBlurRect="@{@string/create_link(viewModel.image)}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@color/transparent_more_black" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_300"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_BookDetailsActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleGravity="center_horizontal"
                app:collapsedTitleTextAppearance="@style/TextAppearance.Title.Collapsed"
                app:contentScrim="@color/colorPrimaryDark"
                app:expandedTitleMarginEnd="0dp"
                app:expandedTitleMarginStart="0dp"
                app:expandedTitleTextAppearance="@style/TextAppearance.Title.Expanded"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/imgview_image_BookDetailsActivity"
                    imageUrlBigRoundBottomRect="@{@string/create_link(viewModel.image)}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_placeholder"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_BookDetailsActivity"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/padding_60"
                    app:contentInsetEnd="@dimen/padding_0"
                    app:contentInsetStart="@dimen/padding_0"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                    <ImageView
                        android:layout_width="@dimen/padding_70"
                        android:layout_height="@dimen/padding_40"
                        android:layout_marginTop="@dimen/padding_10"
                        android:adjustViewBounds="true"
                        android:background="@drawable/big_round_corner_from_right_transparent_color_primary_dark_selector"
                        android:onClick="@{()->viewModel.onButtonBackClicked()}"
                        android:padding="@dimen/padding_10"
                        android:src="@drawable/back_white_icon" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrlviewFragmentHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="70dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:fontFamily="@font/avenir_heavy"
                    android:includeFontPadding="false"
                    android:text="@{viewModel.name}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_25" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:fontFamily="@font/avenir_roman"
                    android:includeFontPadding="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_12"
                    app:htmlText="@{viewModel.publishingDate}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:fontFamily="@font/avenir_heavy"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/font_size_16"
                    app:convertSecondsToMinutes="@{viewModel.duration}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:fontFamily="@font/avenir_heavy"
                    android:includeFontPadding="false"
                    android:text="@string/description"
                    android:textColor="@color/red_light"
                    android:textSize="@dimen/font_size_16" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_20"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:fontFamily="@font/avenir_roman"
                    android:includeFontPadding="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_16"
                    app:htmlText="@{viewModel.description}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:fontFamily="@font/avenir_heavy"
                    android:includeFontPadding="false"
                    android:text="@string/type"
                    android:textColor="@color/red_light"
                    android:textSize="@dimen/font_size_16" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_20"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:fontFamily="@font/avenir_roman"
                    android:includeFontPadding="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_16"
                    app:htmlText="@{viewModel.type}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:fontFamily="@font/avenir_heavy"
                    android:includeFontPadding="false"
                    android:text="@string/artist"
                    android:textColor="@color/red_light"
                    android:textSize="@dimen/font_size_16" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_20"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:fontFamily="@font/avenir_roman"
                    android:includeFontPadding="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_16"
                    app:htmlText="@{viewModel.artist}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:fontFamily="@font/avenir_heavy"
                    android:includeFontPadding="false"
                    android:text="@string/number_of_tracks"
                    android:textColor="@color/red_light"
                    android:textSize="@dimen/font_size_16" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_20"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:fontFamily="@font/avenir_roman"
                    android:includeFontPadding="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_16"
                    app:htmlText="@{viewModel.numnerOfTracks}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:fontFamily="@font/avenir_heavy"
                    android:includeFontPadding="false"
                    android:text="@string/genre"
                    android:textColor="@color/red_light"
                    android:textSize="@dimen/font_size_16" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_20"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:fontFamily="@font/avenir_roman"
                    android:includeFontPadding="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_16"
                    app:htmlText="@{viewModel.genres}" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>